0.99.12
- Persian translation was added (thanks to JraNil)
- PEAR::Calendar 0.5.3 was added to libraries
- PEAR::Date 1.4.6 was added to libraries

0.99.11
- now is possible to do P4A_Widget::useTemplate('dir/file')
- P4A_Toolbar::addLabel() method was added
- a bug on P4A_Date::get_month_name() was fixed
- a bug on P4A_Table was fixed
- a bug with framework-wide libraries was fixed
- P4A_Frame can now handle if an anchored object was destroyed
- P4A_Toolbar(s) constructor was splitted to allow better customization
- some minor beautifications were done

0.99.10
- P4A_Array_Source::load() now can be called more than one time to change the data inside the array_source
- TinyFCK was updated to 0.12
- a bug about invisible labels for read-only P4A_Field was solved
- a bug with P4A_I18N_Messages::get() was solved
- Slovenian translation was added (thanks to Jernej Zorec)

0.99.9
- P4A_Data_Source, P4A_DB_Source and P4A_Array_Source now trigger beforeMoveRow, onMoveRow and afterMoveRow events
- P4A_Mask's beforeMoveRow, onMoveRow and afterMoveRow triggers are declared as "deprecated" and will be removed in 1.2
- some minor beautifications

0.99.8
- a bugfix about P4A_Date::unformat was fixed (1468679 - string padding)
- Polish translation was updated
- Danish translation was added (thanks to spinello)
- PEAR was updated to 1.4.9
- some minor bugfixes were made

0.99.7
- added a "clone" function to emulate php5 cloning system
- a php5 warning bug was solved
- P4A_DB_Source::setQuery() now automatically generates the counting query
- bug n. 1467199 on P4A_Field::getAsString() was solved
- minor beautifications were done

0.99.6
- a bug with mt_MT locale was fixed
- a complete syntax check was done on all files
- a bug with P4A_DB_Source about multiple join with homonym	fields was fixed

0.99.5
- a bug in P4A_Data_Source was fixed
- a bug with P4A_DB_Source::__sleep was fixed
- polish translation was added (thanks to Artur Stuczyński)