@@ -1,0 +1,92 @@
+<?php
+
+/**
+ * P4A - PHP For Applications.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2
+ * as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ * To contact the authors write to:									<br>
+ * CreaLabs															<br>
+ * Via Medail, 32													<br>
+ * 10144 Torino (Italy)												<br>
+ * Web:    {@link http://www.crealabs.it}							<br>
+ * E-mail: {@link mailto:info@crealabs.it info@crealabs.it}
+ *
+ * The latest version of p4a can be obtained from:
+ * {@link http://p4a.sourceforge.net}
+ *
+ * @link http://p4a.sourceforge.net
+ * @link http://www.crealabs.it
+ * @link mailto:info@crealabs.it info@crealabs.it
+ * @copyright CreaLabs
+ * @license http://www.gnu.org/licenses/gpl.html GNU General Public License
+ * @author Fabrizio Balliano <fabrizio.balliano@crealabs.it>
+ * @author Andrea Giardina <andrea.giardina@crealabs.it>
+ * @package p4a
+ */
+
+$messages = array
+(
+	// Date
+    "days"		=> array('Diumenge', 'Dilluns', 'Dimarts', 'Dimecres', 'Dijous', 'Divendres', 'Dissabte'),
+    "months"	=> array('Gener', 'Febrer', 'Març', 'Abril', 'Maig', 'Juny', 'Juliol', 'Agost', 'Setembre', 'Octubre', 'Novembre', 'Desembre'),
+
+	// Standard Toolbar
+	"save"				=> "Confirmar i desar",
+	"cancel"			=> "Cancelar la operació en curs",
+	"new"				=> "Inserir un nou registre",
+	"delete"			=> "Esborrar el registre actual",
+	"print"				=> "Imprimir",
+	"exit"				=> "Sortir",
+	"first"				=> "Anar al primer registre",
+	"prev"				=> "Anar al registre anterior",
+	"next"				=> "Anar al registre següent",
+	"last"				=> "Anar al darrer registre",
+	"first_page"		=> "Anar a la primera pàgina",
+	"prev_page"			=> "Anar a la pàgina prèvia",
+	"next_page"			=> "Anar a la pàgina següent",
+	"last_page"			=> "Anar a la darrera pàgina",
+	"go"				=> "Anar",
+
+	// Table
+	"current_page"		=> "Pàgina",
+	"of_pages"			=> "de",
+	"go_to_page"		=> "Anar a la pàgina",
+	"ascending"			=> "Ascendent",
+	"descending"		=> "Descendent",
+	"selected"			=> "Seleccionat",
+
+	// File uploads
+	"filename"			=> "Nom",
+	"filesize"			=> "Tamany",
+	"filetype"			=> "Tipus",
+	"filepreview"		=> "Previsualització",
+	"filedelete"		=> "Esborrar",
+	"filedownload"		=> "Baixar",
+
+	// Fields
+	"none_selected"		=> "Cap seleccionat",
+
+	// Confirmations
+	"confirm_general"	=> "Estàs segur?",
+	"confirm_confirm"	=> "Confirmar i desar?",
+	"confirm_cancel"	=> "Cancelar la operació en curs?",
+	"confirm_delete"	=> "Esborrar el registre actual?",
+
+	// Yes/No
+	"yes"				=> "Sì",
+	"no"				=> "No"
+);
+
+?>
