@@ -1,5 +1,6 @@
 0.99.12
 - Persian translation was added (thanks to JraNil)
+- Catalan translation was added (thanks to Alvaro Gilabert)
 - PEAR::Calendar 0.5.3 was added to libraries
 - PEAR::Date 1.4.6 was added to libraries
 
